# stock-mcp-service

./: .gitignore  OPTIMIZATION_SUMMARY.md  README.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  pyproject.toml  stock_mcp_server.py
